# CUDA-spectral-ray-tracer

./: .gitignore  CMakeLists.txt  README.md  aabb.cuh  bvh.cu  bvh.cuh  camera.cu  camera.cuh  cie_const.cu  cie_const.cuh  color.cu  color.cuh  color_const.cu  color_const.cuh  color_to_spectrum.cuh  cuda_utility.cu  cuda_utility.cuh  device_init.cuh  hittable.cu  hittable.cuh  host_utility.cuh  interval.cuh  io.cuh  main.cpp  main.cu  quad.cu  quad.cuh  ray.cu  ray.cuh  rendering.cu  rendering.cuh  scene.cu  scene.cuh  sellmeier.cu  sellmeier.cuh  spectrum.cu  spectrum.cuh  sphere.cu  sphere.cuh  srgb_to_spectrum.cuh  (+8 more)
_log_/: log_context.cpp  log_context.h
bvh/: aabb.cu  aabb.cuh  bvh.cu  bvh.cuh
color/: color.cu  color.cuh  color_to_spectrum.cuh
image/: image.cpp  image.h
include/: CImg.h
io/: io.cuh  params.cpp  params.h  save_image.cpp  save_image.h
materials/: material.cu  material.cuh
math/: interval.cuh  vec3.cuh
primitives/: hit_record.cuh  hittable.cuh  prism.cu  prism.cuh  pyramid.cu  pyramid.cuh  quad.cu  quad.cuh  sphere.cu  transform.cu  transform.cuh  tri.cu  tri.cuh  tri_box.cu  tri_box.cuh  tri_quad.cu  tri_quad.cuh
ray/: ray.cuh
refraction/: sellmeier.cu  sellmeier.cuh
rendering/: camera.cu  camera.cuh  camera_builder.cuh  frame_buffer.cuh  render_manager.cu  render_manager.cuh  rendering.cu  rendering.cuh
scene/: scene.cu  scene.cuh
spectrum/: spectrum.cu  spectrum.cuh
utils/: cie_const.cuh  cuda_utility.cu  cuda_utility.cuh  device_init.cuh  multithread.cuh  std_libs.h  utility.cuh  utility.h
